Revert "vendor: go-immutable-radix: update to v1.0.0 upstream release"
This reverts commit 6335ea125c8e6efb65be966168cd18e1e151a922.

--- a/vendor.conf
+++ b/vendor.conf
@@ -154,7 +154,7 @@ github.com/google/certificate-transparency-go       37a384cd035e722ea46e55029093
 golang.org/x/crypto                                 c1f2f97bffc9c53fc40a1a28a5b460094c0050d9
 golang.org/x/time                                   555d28b269f0569763d25dbe1a237ae74c6bcc82
 github.com/hashicorp/go-memdb                       cb9a474f84cc5e41b273b20c6927680b2a8776ad
-github.com/hashicorp/go-immutable-radix             27df80928bb34bb1b0d6d0e01b9e679902e7a6b5 # v1.0.0
+github.com/hashicorp/go-immutable-radix             826af9ccf0feeee615d546d69b11f8e98da8c8f1 git://github.com/tonistiigi/go-immutable-radix.git
 github.com/hashicorp/golang-lru                     7f827b33c0f158ec5dfbba01bb0b14a4541fd81d # v0.5.3
 github.com/coreos/pkg                               97fdf19511ea361ae1c100dd393cc47f8dcfa1e1 # v4
 code.cloudfoundry.org/clock                         02e53af36e6c978af692887ed449b74026d76fec # v1.0.0
