--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: moby-engine
 Section: unknown
 Priority: optional
 Maintainer: Enrico Weigelt <info@metux.net>
-Build-Depends: debhelper (>=11~), golang-1.14-go, pkg-config, libbtrfs-dev
+Build-Depends: debhelper (>=11~), golang-1.14-go, pkg-config, libbtrfs-dev, libdevmapper-dev
 Standards-Version: 4.1.4
 
 Package: moby-engine
