--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -22,7 +22,8 @@ EXEC_NAME=dockerd-$(BUILD_GO_OS)-$(BUILD_GO_ARCH)
 EXEC_OUT=$(BUILD_OUT)/$(EXEC_NAME)
 
 # make sure it fails ...
-export GOPATH=/proc/gopath
+#export GOPATH=/proc/gopath
+export GOPROXY=127.0.0.1:29999
 
 all: compile
 
