--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -32,14 +32,16 @@ compile: $(EXEC_OUT)
 ## generate go.mod in order to use simpler module build mode
 $(CURDIR)/go.mod:
 	$(GO) mod init
-	$(GO) mod tidy
-	$(GO) mod vendor
+#	$(GO) mod tidy
+#	$(GO) mod vendor
 
 $(CURDIR)/vendor/modules.txt:
 	touch $@
 
-$(EXEC_OUT): $(CURDIR)/go.mod $(CURDIR)/vendor/modules.txt
-	$(GO) build -ldflags "$(LDFLAGS)" -mod=vendor -o $@ $(CURDIR)/cmd/dockerd
+#$(EXEC_OUT): $(CURDIR)/go.mod $(CURDIR)/vendor/modules.txt
+$(EXEC_OUT):
+#	$(GO) build -ldflags "$(LDFLAGS)" -mod=vendor -o $@ $(CURDIR)/cmd/dockerd
+	$(GO) build -ldflags "$(LDFLAGS)" -o $@ $(CURDIR)/cmd/dockerd
 
 clean:
 	rm -Rf $(CURDIR)/vendor/modules.txt $(CURDIR)/go.mod $(CURDIR)/tmp
